@@ -49,6 +49,7 @@ well as the configuration of LCDd.
 &tyan;
 &ula200;
 &xosd;
+&i2500vfd;
 
 &ppttrouble;
 
