@@ -25,6 +25,7 @@
   <!ENTITY glcdlib SYSTEM "drivers/glcdlib.docbook">
   <!ENTITY glk SYSTEM "drivers/glk.docbook">
   <!ENTITY hd44780 SYSTEM "drivers/hd44780.docbook">
+  <!ENTITY i2500vfd SYSTEM "drivers/i2500vfd.docbook">
   <!ENTITY icp_a106 SYSTEM "drivers/icp_a106.docbook">
   <!ENTITY imon SYSTEM "drivers/imon.docbook">
   <!ENTITY IOWarrior SYSTEM "drivers/IOWarrior.docbook">
